add event listeners for click and hover

--- a/style.css
+++ b/style.css
@@ -16,5 +16,14 @@
   width: 100px;
   height: 100px;
   border: 1px black solid;
-  box-shadow: inset gray 0px 0px 60px -12px; 
+  box-shadow: inset black 0px 0px 60px -12px;
+  cursor: pointer;
+}
+
+.box:hover {
+  box-shadow: none;
+}
+
+.box:active {
+  box-shadow: inset black 0px 0px 60px -12px;
 }
